--- a/Lab 3. DelegatesTests/Lab 4. LINQTests.csproj
+++ b/Lab 3. DelegatesTests/Lab 4. LINQTests.csproj
@@ -52,14 +52,19 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="FiltersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SMSModuleTests.cs" />
+    <Compile Include="SMSStorageTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WindowsFormsApplication1\Lab 3. Delegates.csproj">
+    <ProjectReference Include="..\WindowsFormsApplication1\Lab 4. LINQ.csproj">
       <Project>{02563053-4DB1-4D63-BABF-EF729BCFCF4A}</Project>
-      <Name>Lab 3. Delegates</Name>
+      <Name>Lab 4. LINQ</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MessagesTest.csv" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
