--- a/WindowsFormsApplication1/Lab 4. LINQ.csproj
+++ b/WindowsFormsApplication1/Lab 4. LINQ.csproj
@@ -50,16 +50,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormatMessage.cs" />
-    <Compile Include="SMSModule.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SMSModule.Designer.cs">
-      <DependentUpon>SMSModule.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Filters.cs" />
+    <Compile Include="FiltersFlds.cs" />
+    <Compile Include="SMSFormat.cs" />
+    <Compile Include="InitListView.cs" />
+    <Compile Include="Message.cs" />
+    <Compile Include="ProcessFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SMSModuleEnhanced.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SMSModuleEnhanced.Designer.cs">
+      <DependentUpon>SMSModuleEnhanced.cs</DependentUpon>
+    </Compile>
     <Compile Include="SMSProvider.cs" />
+    <Compile Include="SMSStorage.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -70,9 +76,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SMSModule.resx">
-      <DependentUpon>SMSModule.cs</DependentUpon>
+    <EmbeddedResource Include="SMSModuleEnhanced.resx">
+      <DependentUpon>SMSModuleEnhanced.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Messages.csv" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
