Change of file properties

--- a/Lab 3. DelegatesTests/Lab 4. LINQTests.csproj
+++ b/Lab 3. DelegatesTests/Lab 4. LINQTests.csproj
@@ -64,7 +64,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="MessagesTest.csv" />
+    <None Include="MessagesTest.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
